Fixes a glitch that prevented the canvas from being interacted with due to the presence of the instruction pop up (whether it was visible or not)
- Also fixes that really annoying thing where closing the pop up would make whitespace appear at the top of the page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -203,63 +203,23 @@ input {
   color: #91c994;
 }
 
-#popup {
+.popup {
+  display: none;
   position: absolute;
   top: 25vh;
   left: 25vw;
   width: 50vw;
   background-color: #f6f2d7;
   color: black;
-  -khtml-opacity: 0;
-  -moz-opacity: 0;
-  -ms-filter: "alpha(opacity=0)";
-  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
-  filter: alpha(opacity=0);
-  opacity: 0;
   border-style: dashed;
   border-radius: 15px;
   border-color: #f89b77;
-  transition: all 1s;
-  -webkit-transition: all 1s;
   z-index: 3;
   margin-left: 80px;
 }
 
-#popup:target {
-  -khtml-opacity: 1;
-  -moz-opacity: 1;
-  -ms-filter: "alpha(opacity=100)";
-  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
-  filter: alpha(opacity=100);
-  opacity: 1;
-}
-
-#close {
-  position: absolute;
-  left: 100%;
-  top: -20px;
-  margin-left: -10px;
-  background-color: #f6f2d7;
-  font-size: 12px;
-  padding: 5px 7px;
-  border-radius: 50px;
-  border-style: solid;
-  border-color: #f89b77;
-  font-weight: bold;
-  color: #f89b77;
-  text-decoration: none;
-  font-family: arial;
-}
-
-#close:hover {
-  background-color: #f6f2d7;
-  border-color: #ff5a25;
-  color: #ff5a25;
-}
-
-#close:active {
-  background-color:#A9F5F2;
-  color:black;
+.popup.open {
+  display: block;
 }
 
 ul {
